config search by name
